# advent-of-code

./: .envrc  .gitignore  Cargo.toml  README.md  flake.nix  log.txt
.github/workflows/: rust.yml  test.yml
advent-2021/: Cargo.toml
advent-2021/puzzle-inputs/: 04.txt  05.txt  09.txt  15.txt  16.txt  18.txt  20.txt  23.txt  24.txt
advent-2021/src/: day01.rs  day02.rs  day03.rs  day04.rs  day05.rs  day06.rs  day07.rs  day08.rs  day09.rs  day10.rs  day11.rs  day12.rs  day13.rs  day14.rs  day15.rs  day16.rs  day17.rs  day18.rs  day19.rs  day20.rs  day21.rs  day22.rs  day23.rs  day24.rs  day25.rs  main.rs
advent-2022/: Cargo.toml
advent-2022/src/: day01.rs  day04.rs  day06.rs  day07.rs  day08.rs  day10.rs  day11.rs  day12.rs  day13.rs  day14.rs  day15.rs  day16.rs  day18.rs  day19.rs  day20.rs  day22.rs  lib.rs  main.rs
advent-2023/: Cargo.toml
advent-2023/src/: day04.rs  day05.rs  day06.rs  day08.rs  day12.rs  day13.rs  day14.rs  day17.rs  day19.rs  day20.rs  day21.rs  day22.rs  day23.rs  day24.rs  day25.rs  main.rs
advent20/: Cargo.toml
advent20/src/: day01.rs  day02.rs  day03.rs  day04.rs  day05.rs  day06.rs  day07.rs  day08.rs  day09.rs  day10.rs  day11.rs  day12.rs  day13.rs  day14.rs  day15.rs  day16.rs  day17.rs  day18.rs  day19.rs  day20.rs  day21.rs  day22.rs  day23.rs  day24.rs  day25.rs  lib.rs  main.rs
advent21/: Cargo.toml
advent21/src/: day01.rs  day02.rs  day03.rs  day04.rs  day05.rs  day06.rs  day07.rs  day08.rs  day09.rs  day10.rs  day11.rs  day12.rs  day13.rs  day14.rs  day15.rs  day16.rs  day17.rs  day18.rs  day19.rs  day20.rs  day21.rs  day22.rs  day23.rs  day24.rs  day25.rs  main.rs
advent22/: Cargo.toml
advent22/src/: day01.rs  day02.rs  day03.rs  day04.rs  day05.rs  day06.rs  day07.rs  day08.rs  day09.rs  day10.rs  day11.rs  day12.rs  day13.rs  day14.rs  day15.rs  day16.rs  day17.rs  day18.rs  day19.rs  day20.rs  day21.rs  day22.rs  day23.rs  day24.rs  day25.rs  lib.rs  main.rs
advent23/: Cargo.toml
advent23/src/: day01.rs  day02.rs  day03.rs  day04.rs  day05.rs  day06.rs  day07.rs  day08.rs  day09.rs  day10.rs  day11.rs  day12.rs  day13.rs  day14.rs  day15.rs  day16.rs  day17.rs  day18.rs  day19.rs  day20.rs  day21.rs  day22.rs  day23.rs  day24.rs  day25.rs  main.rs
advent24/: Cargo.toml
advent24/src/: day01.rs  day02.rs  day03.rs  day04.rs  day05.rs  day06.rs  day07.rs  day08.rs  day09.rs  day10.rs  day11.rs  day12.rs  day13.rs  day14.rs  day15.rs  day16.rs  day17.rs  day18.rs  day19.rs  day20.rs  lib.rs  main.rs
examples/2022/16/: 1.txt
examples/2022/22/: 1.txt
infrastructure/: Cargo.toml
infrastructure/src/: cli.rs  lib.rs  test.rs
shared/: Cargo.toml
shared/src/: arithmetic.rs  graph.rs  grid.rs  lib.rs  linear_equations.rs  matrix.rs  number_theory.rs  numbers.rs  search.rs  string.rs  trie.rs  vector.rs
src/: advent2022.rs  advent2023.rs  day01.rs  day02.rs  day03.rs  day04.rs  day05.rs  day06.rs  day07.rs  day08.rs  day09.rs  day1.rs  day10.rs  day11.rs  day12.rs  day13.rs  day14.rs  day15.rs  day16.rs  day17.rs  day18.rs  day19.rs  day2.rs  day20.rs  day21.rs  day22.rs  day23.rs  day24.rs  day25.rs  day3.rs  day4.rs  day5.rs  day6.rs  day7.rs  day8.rs  disjoint_set.rs  floating.rs  floating_point.rs  grid.rs  linear_equations.rs  (+10 more)
src/advent2022/: day01.rs  day02.rs  day03.rs  day04.rs  day05.rs  day06.rs  day07.rs  day08.rs  day09.rs  day10.rs  day11.rs  day12.rs  day13.rs  day14.rs  day15.rs  day16.rs  day17.rs  day18.rs  day19.rs  day20.rs  day21.rs  day22.rs  day23.rs  day24.rs  day25.rs
src/advent2023/: day01.rs  day02.rs  day03.rs  day04.rs  day05.rs  day06.rs  day07.rs  day08.rs  day09.rs  day10.rs  day11.rs  day12.rs  day13.rs  day14.rs  day15.rs  day16.rs  day17.rs  day18.rs  day19.rs  day20.rs  day21.rs  day22.rs  day23.rs  day24.rs  day25.rs
src/data_structures/: grid.rs
src/math/: graphs.rs  sets.rs
src/math/graphs/: flow_networks.rs
