[package]
name = "advent2023"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
ahash = "0.8.7"
anyhow = "1.0.75"
clap = { version = "4.4.10", features = ["derive"] }
itertools = "0.12.0"
regex = "1.10.2"
strum = { version = "0.25.0", features = ["derive"] }
