[package]
name = "advent-of-code"
version = "0.1.0"
edition = "2021"
rust-version = "1.77.0"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
ahash = { version = "0.8.11", default-features = false, features = [
    "std",
    "no-rng",
] }
anyhow = "1.0.75"
clap = { version = "4.4.10", features = ["derive"] }
easy-cast = "0.5.2"
itertools = "0.12.0"
num-traits = "0.2.18"
rand = { version = "0.8.5", features = ["small_rng"] }
regex = "1.10.2"
strum = { version = "0.25.0", features = ["derive"] }
