[package]
name = "advent24"
version.workspace = true
authors.workspace = true
edition.workspace = true
rust-version.workspace = true

[dependencies]
ahash.workspace = true
anyhow.workspace = true
bitvec.workspace = true
bytecount.workspace = true
easy-cast.workspace = true
itertools.workspace = true
num-traits.workspace = true
rand.workspace = true
regex.workspace = true

image = "0.25.9"
tflitec = "0.7.0"

infrastructure = { path = "../infrastructure" }
shared = { path = "../shared" }

[lints]
workspace = true
