[package]
name = "shared"
version.workspace = true
authors.workspace = true
edition.workspace = true
rust-version.workspace = true

[dependencies]
ahash.workspace = true
easy-cast.workspace = true
itertools.workspace = true
num-traits.workspace = true
rand.workspace = true
regex.workspace = true

infrastructure = { path = "../infrastructure" }

[lints]
workspace = true
